--- a/requirements-test-libraries.txt
+++ b/requirements-test-libraries.txt
@@ -119,6 +119,7 @@ spiceypy==5.1.2
 exchangelib==4.9.0
 NBT==1.5.1
 minecraft-launcher-lib==5.3; python_version >= '3.8'
+mscerts==2023.3.20.1
 
 # ------------------- Platform (OS) specifics
 
